syntax = "proto3";

package inventory;

service Inventory {
  rpc UpdateInventoryQty (UpdateQtyRequest) returns (NoResponse);
}

message UpdateQtyRequest {
  int64 product_id = 1;
  int64 qty = 2;
}

message NoResponse {
}